# DocRAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: url.txt
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/node/: nodes.py  reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
